[package]
name = "seex"
version = "0.1.0"
description = "ClipET - Clipboard Event Tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "seex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3.6"
clipboard-master = "4"
chrono = "0.4"
regex = "1"
